(6/2/2013)
- Added map title
- Updated Eternal Battlegrounds map
- Updated icons for objectives

(6/1/2013)
- Added always on top checkbox
- Main window can now be dragged around
- Removed redundant function calls
- Fixed and issue with disappearing window
- Replaced the icon to avoid confusion with GW2.exe

(5/31/2013)
- Initial Release